--- a/package.json
+++ b/package.json
@@ -4,44 +4,49 @@
   "private": true,
   "scripts": {},
   "dependencies": {
-    "@angular-devkit/build-angular": "0.1000.3",
-    "@angular-devkit/build-ng-packagr": "0.1000.3",
-    "@angular/animations": "10.0.4",
-    "@angular/cli": "10.0.3",
-    "@angular/common": "10.0.4",
-    "@angular/compiler": "10.0.4",
-    "@angular/compiler-cli": "10.0.4",
-    "@angular/core": "10.0.4",
-    "@angular/forms": "10.0.4",
-    "@angular/platform-browser": "10.0.4",
-    "@angular/platform-browser-dynamic": "10.0.4",
-    "@angular/router": "10.0.4",
-    "ajv": "6.12.2",
-    "ng-packagr": "10.0.2",
-    "typescript": "4.0.5"
+    "@angular-devkit/build-angular": "0.1100.1",
+    "@angular-devkit/build-ng-packagr": "0.1002.0",
+    "@angular/animations": "10.2.3",
+    "@angular/cdk": "10.2.7",
+    "@angular/cli": "10.2.0",
+    "@angular/common": "10.2.3",
+    "@angular/compiler": "10.2.3",
+    "@angular/compiler-cli": "10.2.3",
+    "@angular/core": "10.2.3",
+    "@angular/forms": "10.2.3",
+    "@angular/localize": "10.2.3",
+    "@angular/platform-browser": "10.2.3",
+    "@angular/platform-browser-dynamic": "10.2.3",
+    "@angular/router": "10.2.3",
+    "ajv": "6.12.6",
+    "ng-packagr": "10.1.2",
+    "tslib": "2.0.3",
+    "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular/language-service": "10.0.4",
-    "@types/jasmine": "3.5.10",
+    "@angular/language-service": "10.2.3",
+    "@types/jasmine": "3.6.1",
     "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.14.7",
     "codelyzer": "5.2.2",
-    "husky": "4.2.5",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "5.0.2",
-    "karma": "5.0.0",
+    "husky": "4.3.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "5.2.3",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "3.3.1",
+    "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
-    "lint-staged": "10.2.9",
-    "prettier": "2.0.5",
+    "lint-staged": "10.5.1",
+    "prettier": "2.1.2",
     "prettier-stylelint": "0.4.2",
     "puppeteer": "1.20.0",
-    "rimraf": "2.7.1",
-    "stylelint": "13.6.0",
+    "rimraf": "3.0.2",
+    "stylelint": "13.7.2",
     "stylelint-config-standard": "20.0.0",
-    "ts-node": "8.10.2",
-    "tslint": "6.1.2",
-    "tslint-config-prettier": "1.18.0"
+    "ts-node": "9.0.0",
+    "tslint": "6.1.3",
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "4.0.5"
   }
 }
