--- a/projects/learning-angular-lib/package.json
+++ b/projects/learning-angular-lib/package.json
@@ -1,42 +1,20 @@
 {
   "name": "@luotao/learning-angular-lib",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
-    "build:dev": "ng build learning-angular-lib && gulp copyToAPP",
-    "build:prod": "ng build learning-angular-lib --prod",
+    "build:dev": "node --max-old-space-size=4096 ../../node_modules/@angular/cli/bin/ng build learning-angular-lib && gulp copyToAPP",
+    "build:prod": "node --max-old-space-size=4096 ../../node_modules/@angular/cli/bin/ng build learning-angular-lib --prod",
     "publish-2-npm": "npmrc luotao && npm publish ./dist --registry http://registry.npmjs.org/ --access public",
-    "test:unit": "ng test learning-angular-lib"
+    "test:unit": "node --max-old-space-size=4096 ../../node_modules/@angular/cli/bin/ng test learning-angular-lib"
   },
   "dependencies": {
-    "@angular-devkit/build-angular": "0.1001.7",
-    "@angular/animations": "10.1.6",
-    "@angular/cdk": "10.2.5",
-    "@angular/cli": "10.1.7",
-    "@angular/common": "10.1.6",
-    "@angular/compiler": "10.1.6",
-    "@angular/compiler-cli": "10.1.6",
-    "@angular/core": "10.1.6",
-    "@angular/forms": "10.1.6",
-    "@angular/language-service": "10.1.6",
-    "@angular/localize": "10.1.6",
-    "@angular/platform-browser": "10.1.6",
-    "@angular/platform-browser-dynamic": "10.1.6",
-    "@angular/router": "10.1.6",
-    "@fortawesome/angular-fontawesome": "0.7.0",
-    "@fortawesome/fontawesome-free": "5.13.1",
-    "@fortawesome/fontawesome-svg-core": "1.2.30",
-    "@fortawesome/free-regular-svg-icons": "5.14.0",
-    "@fortawesome/free-solid-svg-icons": "5.14.0",
-    "@types/lodash": "4.14.162",
-    "ajv": "6.12.4",
-    "cross-env": "7.0.2",
+    "@types/lodash": "4.14.165",
     "lodash": "4.17.20",
     "lodash-decorators": "6.0.1",
-    "ng-zorro-antd": "10.0.2",
-    "ts-node": "9.0.0",
-    "tslib": "2.0.3",
-    "typescript": "4.0.5",
-    "zone.js": "0.11.2"
+    "ng-zorro-antd": "10.1.1"
+  },
+  "peerDependencies": {
+    "@angular/core": "^10.0.0"
   },
   "devDependencies": {
     "gulp": "4.0.2"
