--- a/projects/learning-angular-lib/tsconfig.json
+++ b/projects/learning-angular-lib/tsconfig.json
@@ -10,6 +10,7 @@
   "compilerOptions": {
     "baseUrl": "src/",
     "declaration": true,
+    "declarationMap": true,
     "inlineSources": false,
     "outDir": "../../out-tsc/lib",
     "paths": {
