--- a/projects/learning-angular-lib/package.json
+++ b/projects/learning-angular-lib/package.json
@@ -1,20 +1,17 @@
 {
   "name": "@luotao/learning-angular-lib",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "scripts": {
     "build:dev": "node --max-old-space-size=4096 ../../node_modules/@angular/cli/bin/ng build learning-angular-lib && gulp copyToAPP",
     "build:prod": "node --max-old-space-size=4096 ../../node_modules/@angular/cli/bin/ng build learning-angular-lib --prod",
-    "publish-2-npm": "npmrc luotao && npm publish ./dist --registry http://registry.npmjs.org/ --access public",
+    "publish:npm": "npmrc luotao && npm publish ./dist --registry https://registry.npmjs.org/ --access public",
     "test:unit": "node --max-old-space-size=4096 ../../node_modules/@angular/cli/bin/ng test learning-angular-lib"
   },
   "dependencies": {
-    "@types/lodash": "4.14.165",
-    "lodash": "4.17.20",
+    "@types/lodash": "4.14.169",
+    "lodash": "4.17.21",
     "lodash-decorators": "6.0.1",
-    "ng-zorro-antd": "10.1.1"
-  },
-  "peerDependencies": {
-    "@angular/core": "^10.0.0"
+    "ng-zorro-antd": "11.4.1"
   },
   "devDependencies": {
     "gulp": "4.0.2"
